Fixed styling to make horizontal scrolling work again

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -33,9 +33,8 @@
       overflow: hidden;
     }
     ol {
-      display: flex;
+      overflow-x: auto;
       height: 100%;
-      align-items: center;
       font-size: 0;
       width: 100%;
       padding: 100px 0 100px 0px;
